# terrarium

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  LICENSE  PLAN.md  README.md  package-lock.json  package.json
.github/workflows/: owner.yml  publish-employee.yml  release.yml
contracts/: .gitignore  foundry.toml  remappings.txt
contracts/script/: DeployWallet.s.sol
contracts/src/: JwksRegistry.sol  JwtValidator.sol  SpendPolicy.sol  TerrariumWallet.sol
contracts/test/: JwksRegistry.t.sol  JwtValidator.t.sol  SpendPolicy.t.sol  TerrariumWallet.t.sol
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: actions.rs  budget.rs  config.rs  context.rs  inference.rs  journal.rs  lib.rs  milestones.rs  models.rs  pr.rs  spend.rs  status.rs  tasks.rs  token.rs  wallet.rs  wiki.rs
crates/employee/: Cargo.toml
crates/employee/src/: main.rs
crates/owner/: Cargo.toml
crates/owner/src/: main.rs
employee/: Dockerfile  entrypoint.sh
owner/: Dockerfile
templates/: PLAN.md.hbs  employee.yml  review.yml  terrarium.json.hbs  terrarium.yml
templates/.github/workflows/: employee.yml.hbs  owner.yml.hbs  pr-review.yml.hbs
